--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,52 @@
 language: ruby
 
 rvm:
-- 2.1
-- 2.0.0
-- 1.9.3
-- 1.9.2
-- ruby-head
+  - 2.2
+  - 2.1
+  - 2.0.0
+  - 1.9.3
+  - ruby-head
 
 env:
+  - RUBYGEMS_VERSION=
+  - RUBYGEMS_VERSION=2.4.5
   - RUBYGEMS_VERSION=2.2.2
   - RUBYGEMS_VERSION=2.1.11
   - RUBYGEMS_VERSION=2.0.14
-  - RUBYGEMS_VERSION=1.8.28
+  - RUBYGEMS_VERSION=1.8.29
 
 before_install:
-  - gem update --system $RUBYGEMS_VERSION
+  - if [ -n "$RUBYGEMS_VERSION" ]; then gem update --system $RUBYGEMS_VERSION; fi
   - gem --version
 
 bundler_args: --without guard
 
+sudo: false
+
 matrix:
-  exclude:
-  - rvm: 2.1
-    env: RUBYGEMS_VERSION=1.8.28
-  - rvm: 2.0.0
-    env: RUBYGEMS_VERSION=1.8.28
   allow_failures:
-  - rvm: ruby-head
+    - rvm: ruby-head
+  exclude:
+    - rvm: 2.2
+      env: RUBYGEMS_VERSION=2.2.2
+    - rvm: 2.2
+      env: RUBYGEMS_VERSION=2.1.11
+    - rvm: 2.2
+      env: RUBYGEMS_VERSION=2.0.14
+    - rvm: 2.2
+      env: RUBYGEMS_VERSION=1.8.29
+    - rvm: 2.1
+      env: RUBYGEMS_VERSION=1.8.29
+    - rvm: 2.0.0
+      env: RUBYGEMS_VERSION=1.8.29
+    - rvm: ruby-head
+      env: RUBYGEMS_VERSION=2.2.2
+    - rvm: ruby-head
+      env: RUBYGEMS_VERSION=2.1.11
+    - rvm: ruby-head
+      env: RUBYGEMS_VERSION=2.0.14
+    - rvm: ruby-head
+      env: RUBYGEMS_VERSION=1.8.29
+
+notifications:
+  irc: "chat.freenode.net#kitchenci"
